src/test/ui/attributes/unknown-attr.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error: cannot find attribute macro `mutable_doc` in this scope
  --> $DIR/unknown-attr.rs:5:4
   |
LL | #![mutable_doc]
   |    ^^^^^^^^^^^

error: cannot find attribute macro `dance` in this scope
  --> $DIR/unknown-attr.rs:8:3
   |
LL | #[dance] mod a {}
   |   ^^^^^

error: cannot find attribute macro `dance` in this scope
=======
error: cannot find attribute `mutable_doc` in this scope
  --> $DIR/unknown-attr.rs:5:4
   |
LL | #![mutable_doc]
   |    ^^^^^^^^^^^

error: cannot find attribute `dance` in this scope
  --> $DIR/unknown-attr.rs:8:3
   |
LL | #[dance] mod a {}
   |   ^^^^^

error: cannot find attribute `dance` in this scope
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/unknown-attr.rs:11:3
   |
LL | #[dance] fn main() {}
   |   ^^^^^

error: aborting due to 3 previous errors

